--- a/CreateThread.css
+++ b/CreateThread.css
@@ -1,8 +1,7 @@
 body {
-    background: linear-gradient(-45deg, #00c7ff, #00b2ff, #0e9db4, #23d5ab);
+    background: linear-gradient(-45deg, #00c7ff, #00ffc9, #00ffeb, #23d5ab);
     font-family: 'Kdam Thmor Pro', sans-serif;
     background-size: 400% 400%;
-
     height: 400%;
 }
 
@@ -45,7 +44,7 @@ body {
     align-content: center;
     border-radius: 25px;
 
-    border: none;
+
     box-shadow:
 
             2.8px 2.8px 2.2px rgba(0, 0, 0, 0.029),
@@ -58,7 +57,7 @@ body {
     background: linear-gradient(-45deg, rgba(0, 199, 255, 0.55), rgba(0, 178, 255, 0.49), rgba(14, 157, 180, 0.45), rgba(35, 213, 171, 0.46));
 
     background-size: 400% 400%;
-
+    border: solid 1px #181b1c;
 
     flex-direction: column;
     align-items: center;
@@ -67,6 +66,7 @@ body {
     padding-top: 105px;
     overflow: auto;
 }
+
 .button{
     display: flex;
     align-content: center;
@@ -157,5 +157,30 @@ body {
 .header-right {
     float: right;
 }
+.titleinput{
+    display: flex;
+    align-content: center;
+    background: linear-gradient(-45deg, rgba(0, 199, 255, 0.55), rgba(0, 178, 255, 0.49), rgba(14, 157, 180, 0.45), rgba(35, 213, 171, 0.46));
+    border-radius: 25px;
+    border: solid 1px #18191a;
+    animation: gradient 4s ease infinite;
+    box-shadow:
+            2.8px 2.8px 2.2px rgba(0, 0, 0, 0.029),
+            6.7px 6.7px 5.3px rgba(0, 0, 0, 0.037),
+            12.5px 12.5px 10px rgba(0, 0, 0, 0.042),
+            22.3px 22.3px 17.9px rgba(0, 0, 0, 0.047),
+            41.8px 41.8px 33.4px rgba(0, 0, 0, 0.053),
+            100px 100px 80px rgba(0, 0, 0, 0.07);
+    animation-name: bite;
+transition: 0.5s;
+}
 
+.titleinput:hover{
+    transition: 0.1s;
+    animation-name: bite;
+    font-size: 15px;
+    font-weight: bolder;
+    animation: gradient 4s ease infinite;
+    filter: drop-shadow(0 0 0.75rem #ffffff);
 
+}
