--- a/detailcss.css
+++ b/detailcss.css
@@ -9,11 +9,19 @@
     justify-content: center;
     padding: 5px;
     font-weight: bold;
-    font-size: 50px;
+
 }
 
 .authors{
+ font-family: 'Roboto', sans-serif;
+    font-size: 17px;
     flex: 20%;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .content{
@@ -240,6 +248,58 @@ img.imageprofile{
     color: var(--secondary-color);
     position: relative;
     justify-content: flex-end;
+
+}
+.thumbsup{
+    max-width: 20px;
+    color: var(--color1);
+    font-size: 20px;
+    margin-right: 10px;
+
+    animation: rotate 1s ;
+    
+}
+.thumbsdown {
+    max-width: 20px;
+    color: var(--color1);
+    font-size: 20px;
+    margin-right: 10px;
+    rotate: 180deg;
+
+    animation: rotate 1s ;
+
+}
+
+.thumbsdown:hover{
+    animation: shake 0.5s;
+    max-width: 25px;
+    
+
+
+}
+.thumbsup:hover {
+    animation: shake 0.5s;
+    max-width: 25px;
+}
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    50% {
+        transform: translate(-10px, 0px);
+    }
+    100% {
+        transform: translate(0px, 0px);
+    }
 
 }
 
